--- a/style.css
+++ b/style.css
@@ -45,12 +45,24 @@ a {
     text-decoration: none;
 }
 
-.main-head {
-    background: #032433;
-    color: white;
-    position: sticky;
-    top: 0px;
-    z-index: 3;
+/* Default (background #032433 and white text for "Home" section) */
+.main-head{
+  background: #032433;
+  color: white;
+  position: sticky;
+  top: 0px;
+  z-index: 3;
+  transition: background 0.3s, color 0.3s; /* Smooth transition effect */
+}
+
+ul li a {
+  color: white;
+}
+
+/* When scrolled to "Skills", "Projects", or "Contact" (transparent background and #032433 text color) */
+.main-head.transparent, ul li a.transparent{
+  background: transparent;
+  color: #032433;
 }
 
 button {
@@ -69,38 +81,38 @@ button:hover {
 }
 
 nav {
-    padding: 2rem;
-    display: flex;
-    width: 90%;
-    margin: auto;
-    align-items: center;
-    min-height: 10vh;
-    flex-wrap: wrap;
+  padding: 2rem;
+  display: flex;
+  width: 90%;
+  margin: auto;
+  align-items: center;
+  min-height: 10vh;
+  flex-wrap: wrap;
 }
 
 nav ul {
-    display: flex;
-    flex: 1 1 40rem;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  flex: 1 1 40rem;
+  list-style: none;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .home, .skills, .projects, .contact {
-    position: relative;
-    padding: 0.5rem;
-    text-decoration: none;
+  position: relative;
+  padding: 0.5rem;
+  text-decoration: none;
 }
 
 .home:hover::after, .skills:hover::after, .projects:hover::after, .contact:hover::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -2px;
-    height: 2px;
-    background-color: #596a72;
-    border-radius: 1px;
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  height: 2px;
+  background-color: #596a72;
+  border-radius: 1px;
 }
 
 #logo {
